@@ -5,8 +5,14 @@
 all::
 	@echo Cheers
 
-deploy:
+deploy::
 	(cp ambient_data.db /var/run/ambient_data.db)
+
+init_db::
+	(sqlite3 ambient_data.db < ambient_data.sql)
+
+init_clean_db::
+	(sqlite3 ambient_data.db < ambient_data_clean.sql)
 
 clean::
 	rm -f *~
