@@ -3,6 +3,8 @@
 #
 
 
+2021-06-07 -> ## amtrack && repo stuff
+              add some first code content for sqlite handling
 
 2021-06-06 -> ## amtrack && repo stuff
               add first sqlite content
